# terminal-mba

./: .gitignore  CLAUDE.md  README.md  package-lock.json  package.json  playwright.config.ts  pyproject.toml
e2e/: dashboard.spec.ts
frontend/: package.json  tsconfig.json
frontend/src/: app.ts  build.ts  index.html  manifest.json  styles.css  sw.ts
src/terminalmba/: __init__.py  active.py  app.py  changelog.py  cli.py  convert.py  cost.py  data.py  handoff.py  models.py  remote.py  search.py  terminals.py
tests/: conftest.py  test_api.py  test_cost.py  test_models.py  test_search.py
