[project]
name = "terminalmba"
version = "0.1.0"
description = "AI coding agent session dashboard (Python fork of codedash)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "typer>=0.12",
    "orjson>=3.10",
    "rapidfuzz>=3.9",
    "httpx>=0.27",
]

[project.scripts]
terminalmba = "terminalmba.cli:app"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/terminalmba"]
